change groupId to groupName, bug fixes